<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo720"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="edu.upc.eseiaat.pma.V10LIARDICE.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.21"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Not Connected" />

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/connect" />

        <TextView
            android:id="@+id/txt_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_winner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_num_you"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.27"
            android:textAlignment="center"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/txt_shake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/shake_phone"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="104dp" />

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="finish"
            android:text="@string/fin" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_comparar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="compare"
            android:text="@string/compara" />

        <Button
            android:id="@+id/btn_plantarse"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignBottom="@+id/btn_send"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:backgroundTint="@android:color/holo_orange_light"
            android:onClick="plantarse"
            android:text="@string/acaba_ronda" />
    </RelativeLayout>
</LinearLayout>
